# turbo_audio

./: .luarc.json  2  Cargo.toml  Dockerfile  README.MD  Settings.json
.github/workflows/: ci.yml  github-actions.yml
effects/lua/: fade.lua  rainbow.lua  sketchers.lua  spectrogram.lua  stereobar.lua
effects/lua/libs/: colors.lua
effects/python/: test.py
effects/rust/raindrop/: Cargo.toml  Makefile.toml
effects/rust/raindrop/src/: lib.rs
effects/rust/soin/: Cargo.toml  Makefile.toml
effects/rust/soin/src/: lib.rs
general_plugins/ui/: Cargo.toml
general_plugins/ui/src/: lib.rs
scripts/: fade.lua  framework.lua  rainbow.lua  sketchers.lua  spectrogram.lua  stereobar.lua
scripts/libs/: colors.lua
src/: audio.rs  audio_config.rs  audio_processing.rs  config_parser.rs  connections.rs  controller.rs  core.rs  effect.rs  effects.rs  hot_reload.rs  main.rs  pipewire_listener.rs  resources.rs  server.rs  server_ex.rs  server_tokio.rs
src/connections/: tcp.rs  terminal.rs  usb.rs
src/core/: color.rs  ledstrip.rs
src/effects/: effect.rs  moody_effect.rs
src/resources/: color.rs  effect.rs  effects.rs  ledstrip.rs  settings.rs
src/resources/effects/: lua.rs  moody.rs  raindrop.rs
turbo_audio/: Cargo.toml  LICENSE  README.MD  Settings.json
turbo_audio/src/: config_parser.rs  controller.rs  hot_reload.rs  hot_reloader.rs  main.rs
turbo_audio/src/audio/: audio_processing.rs  audio_stream.rs  mod.rs  pipewire_listener.rs
turbo_audio/src/connections/: mod.rs  tcp.rs
turbo_audio/src/effects/: lua.rs  mod.rs  native.rs  python.rs
turbo_audio/src/plugins/: audio_api.rs  mod.rs
turbo_audio/src/plugins/effects/: mod.rs  native.rs
turbo_audio/src/plugins/general/: manager.rs  mod.rs  native.rs
turbo_audio/src/resources/: color.rs  ledstrip.rs  mod.rs  settings.rs
turbo_audio/src/resources/effects/: lua.rs  mod.rs  raindrop.rs
turbo_plugin/: Cargo.toml
turbo_plugin/src/: audio_api.rs  effect_plugin.rs  general_plugin.rs  lib.rs
turbo_plugin_python/: Cargo.toml  pyproject.toml  turbo_python.pyi
turbo_plugin_python/scripts/: test.py
turbo_plugin_python/src/: lib.rs  main.rs  python_numeric.rs
