[package]
name = "turbo_audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.10", features = ["derive"] }
config = { version = "0.13.2", features = ["json"]}
cpal = { version = "0.14.0", features = ["jack"] }
pipewire = "0.5.0"
retry = "2.0.0"
