[package]
name = "turbo_audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.3"
clap = { version = "4.0.10", features = ["derive"] }
config = { version = "0.13.2", features = ["json"]}
cpal = { version = "0.14.0", features = ["jack"] }
jsonschema = "0.16.1"
log = "0.4.17"
mlua = { version = "0.8.6", features = ["luajit52", "vendored", "async", "send", "serialize"] }
pipewire = "0.5.0"
pretty_env_logger = "0.4.0"
rand = "0.8"
retry = "2.0.0"
ring-channel = "0.11.0"
serde = {version = "1.0.150", features = ["derive"]}
serde_json = "1.0.89"

