[package]
name = "turbo_audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytemuck = { version = "1.14.0", features = ["derive"] }
chrono = "0.4.19"
clap = { version = "4.4.8", features = ["derive"] }
cpal = { version = "0.15.2" }
dasp = "0.11.0"
dasp_ring_buffer = "0.11.0"
dasp_signal = "0.11.0"
dasp_window = { version = "0.11.0", features = ["hanning"]}
env_logger = "0.10.0"
jsonschema = "0.16.1"
log = "0.4.17"
mlua = { version = "0.9.2", features = ["luajit52", "vendored", "async", "send", "serialize", "send"] }
notify-debouncer-mini = { version = "0.4.1" }
pipewire = "0.7.2"
rand = "0.8"
retry = "2.0.0"
ring-channel = "0.11.0"
ringbuf = "0.3.1"
rustfft = "6.1.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.106"
